# trustshift

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml  run_all.py  schema.py
audit/: diagnosis.py  engine.py  remediation.py
domains/clinical/: adapter.py
domains/lending/: adapter.py  train.py
domains/nlp/: adapter.py
domains/security/: adapter.py  run_pipeline.py
paper/: main.tex  numbers.json  numbers.py  references.bib
results/: audit_clinical.json  audit_lending.json  audit_nlp.json  audit_security.json  diagnosis_clinical.json  diagnosis_lending.json  diagnosis_nlp.json  diagnosis_security.json  meta_analysis.json  meta_shift_points.csv  remediation_clinical.json  remediation_lending.json  remediation_nlp.json  remediation_security.json  security_family_recall.json
results/tables/: T2_master.csv  T4_diagnosis.csv  T5_remediation.csv
synthesis/: fig_taxonomy.py  figures.py  meta.py  tables.py
tests/: test_engine.py  test_schema.py
